#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[161] --> Update Halls Of Reflection by aedansilver.
[160] --> Add Looking For Group Join All Maps.
[159] --> Fix Ebon Gargoyle Target and make gargoyle benefit from haste auras, like unholy presence. (By Demonid)
[158] --> Improved Mirror Images AI by A-Metaphysical-Drama. (TEST)
[157] --> Fix Earth Shield by joschiwald.
[156] --> Fix Glyph of Succubus. (TEST)
[155] --> Update Sunwell Plateau by aedansilver.
[154] --> Fix - Don't Allow Vehicles in Arena by Demonid.
[153] --> Update Icecrown Citadel by aedansilver.
[152] --> Update Ulduar by aedansilver.
[151] --> Update ICC by Elron103.
[150] --> Update Trial of the Champion. (Thx Faq / sioa)
[149] --> Fix Sindragosa. [TEST] (By Elron103)
[148] --> Fix priest bug (kills and honour) spell_priest_spirit_of_redemption. (Thx Vitasic)
[147] --> Fix sacred shield CD. (TEST, By Odyssey & aedansilver)
[146] --> Fix duel reset cd and Bladestorm. (By iconskater) 
[145] --> Fix Sindragosa. (By Elron103) 
[144] --> Fix MMaps boss sindragosa and more... (Info #9083).
[143] --> Fix crash StopCastingCharm (TEST #9293). 
[142] --> Revert 'Fix Gargoyle haste (TEST).'
[141] --> Small correction arena logs.
[140] --> Hack-Fix Rune Strike. (By Juliean)
[139] --> Fix loot Halls of Reflection.
[138] --> Fix Blood Prince Council and Lord Marrowgar (Original script TC).
[137] --> Fix Lady Deathwhisper (Original script TC).
[136] --> SQL/Misc: Database reguid, cleanup files. (By Elron103)
[135] --> Fix loot Trial of Crusader.
[134] --> Fix Lich King.
[133] --> Fix loot Freya and Trial of Champion.
[132] --> Fix Sindragosa.
[131] --> Fix Instance Cooldown Exploit.